Version 1.2
------------

[X] - Use BCrypt as the internal password hash and increase the file format number to 1.1. Old files of version 1.0
      are backwards compatible. They will get saved automatically to version 1.1.

[ ] - When entering a password, implement an on-screen keyboard so that the user can avoid typing the password on the keyboard.
      This is to guard against key sniffers. This is a user request.

[ ] - Add context menu to the rich text view to include all the standard edting features.

[ ] - Implement an application properties dialog to give more customisation to the user.

[ ] - Implement panic key to quickly minimize the application.

[ ] - Implement screen white hot key out to change th text to the same color as the background.

[ ] - Implement spell checker.

[ ] - Recent files list on the file menu.



Version 1.1
------------

[X] - Added loader factory to support older versions of the file format to make it backwards compatible. 
      If you save a file in an older file format, it will be saved in the latest format.

[X] - Add a font selector and font size selector to the main toolbar.

[X] - Password entry dialog box now accepts Return key on each text box.

[X] - Make the save button/menu item act more like a normal Save Button. Also added a "Save As" menu item that will
      always prompt for a password and filename.

[X] - If you try to exit with unsaved changes, prompt to save.

[X] - Add password strength meter to password input box. This uses rules like using numbers, mixed case, punctuation symbols and 
      length as indicators. The meter will also do a whitelist check against common password along with letter substituded versions.

[X] - Add Status bar to the bottom of the window to display common prompts like new document, loaded and saved etc.
    
[X] - Save window state to XML settings file.
